# bsp

./: BSP_UPDATES.md  CMakeLists.txt  LICENSE  README.md  gpg-keygen-batch  make  make_all  version
.github/workflows/: build-ubuntu-22.04-amd64-bsp.yaml  build-ubuntu-24.04-amd64-bsp.yaml
archive/bsp/: gxa-installer_36.3.run  gxa-installer_36.4.3.run  gxa-installer_36.4.4.run  gxa-installer_36.4.run
config/: README.txt  contrib-packages.list  gxa-build.conf  l4t-sources.xml  locales.list  main-packages.list  non-free-firmware-packages.list  non-free-packages.list  timezones.list
config/l4t-overlay/: jetson-agx-orin-gxa-1.conf
config/l4t-overlay/L4T36.3/: README.txt
config/l4t-overlay/L4T36.3/etc/: bsp-release
config/l4t-overlay/L4T36.4.4/: README.txt
config/l4t-overlay/L4T36.4.4/etc/: bsp-release
config/l4t-overlay/bootloader/: Orin-gxa-1-gpio-default.dtsi
config/l4t-overlay/bootloader/generic/BCT/: Orin-gxa-1-pinmux.dtsi
config/l4t-overlay/kernel/dtb/: tegra234-p3737-0000+p3701-0008-nv.dtb
config/l4t-overlay/rootfs/etc/: motd
config/l4t-overlay/rootfs/opt/: tw686x_1.0.3_arm64.deb
config/l4t-overlay/source/hardware/nvidia/t23x/nv-public/: tegra234-p3701-0000.dtsi  tegra234-p3737-0000+p3701-0000.dts  tegra234-p3737-0000.dtsi  tegra234.dtsi
config/l4t-overlay/source/hardware/nvidia/t23x/nv-public/nv-soc/: tegra234-base-overlay.dtsi
config/l4t-overlay/source/hardware/nvidia/t23x/nv-public/overlay/: tegra234-p3737-rgmii_overlay.dts
pinmux/: Orin_Jetson_Series_Pinmux_Config_Template_2.0.xlsm.original
scripts/: CMakeLists.txt  gxa-chroot.sh  gxa-docker.sh  gxa-flash.sh  gxa-init-build-machine.sh  gxa-installer-cleanup.sh  gxa-installer.sh  gxa-make.sh  gxa-pack.sh  gxa-patch-fs.sh  gxa-uefi.sh  gxa-utils.sh
scripts/L4T36.3/: README.txt
scripts/L4T36.3/etc/: bsp-release
scripts/L4T36.4/: README.txt
scripts/L4T36.4.3/: README.txt
scripts/L4T38.2/: README.txt
scripts/cmake/: cpack.cmake  cpp.cmake  version.cmake
scripts/docker/: CMakeLists.txt
scripts/docker/ubuntu22.04/: CMakeLists.txt  Dockerfile
scripts/docker/ubuntu24.04/: CMakeLists.txt  Dockerfile
src/: CMakeLists.txt
src/as-pinctl/: CMakeLists.txt  README.md
src/as-pinctl/pinlib/: CMakeLists.txt  pinlib.cc
src/pinctl/: CMakeLists.txt  pinctl.cc
src/pinctl/pinlib/: pinlib.h
yocto/: README.md
yocto/config/: imx95-build.conf  local.conf.append
yocto/config/meta-astute/: README.md  validate-layer.sh
yocto/config/meta-astute/conf/: layer.conf
yocto/config/meta-astute/recipes-core/apt-sources/: apt-sources_1.0.bb
yocto/config/meta-astute/recipes-core/apt-sources/files/: apt.conf  astute.gpg  astute.list
yocto/config/meta-astute/recipes-core/motd/: motd_1.0.bb
yocto/config/meta-astute/recipes-core/motd/files/: motd  update-motd.sh
yocto/config/meta-astute/recipes-graphics/wallpaper/: README.md  wallpaper_1.0.bb
yocto/docs/: APT_CONFIGURATION.md  BSP_COMPONENTS.md  EXAMPLES.md  QUICK_REFERENCE.md
yocto/scripts/: build-imx95.sh  chroot-test.sh
